--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+ .sidebar .nav-sidebar .agenda_title {
+   display: inline-block;
+   padding: 5px 36px 5px 10px;
+
+ }
+ .sidebar .nav-sidebar .nav-item .agenda_title .nav-icon {
+   width: 0;
+   margin: 0;
+ }
+ .sidebar .nav-sidebar .agenda_title,
+ .sidebar .nav-sidebar .aagenda_delete {
+   vertical-align: middle;
+ }
